--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.14",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
